// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clickable component renders a component wrapped in withClickable 1`] = `
<div>
  <span
    to="/"
  >
    Custom wrapper: 
    Hit me
  </span>
</div>
`;

exports[`Clickable component renders a default button 1`] = `
<div>
  <button
    type="button"
  >
    Hit me
  </button>
</div>
`;

exports[`Clickable component renders a download button 1`] = `
<div>
  <a
    download="test-download"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hit me
  </a>
</div>
`;

exports[`Clickable component renders a reset button 1`] = `
<div>
  <button
    type="reset"
  >
    Hit me
  </button>
</div>
`;

exports[`Clickable component renders a router link 1`] = `<div />`;

exports[`Clickable component renders a submit button 1`] = `
<div>
  <button
    type="submit"
  >
    Hit me
  </button>
</div>
`;

exports[`Clickable component renders a with custom className 1`] = `
<div>
  <button
    class="test-class"
    type="button"
  >
    Hit me
  </button>
</div>
`;

exports[`Clickable component renders an anchor link 1`] = `
<div>
  <a
    href="#"
  >
    Hit me
  </a>
</div>
`;

exports[`Clickable component renders correctly 1`] = `
<div>
  <button
    type="button"
  >
    Hit me
  </button>
</div>
`;

exports[`Clickable component triggers an onClick event 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;
